[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/UI/UIComponents/Haggle.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/UI.tres" type="Theme" id=2]
[ext_resource path="res://assets/UI/metalPanel_plate.png" type="Texture" id=3]

[node name="Haggle" type="NinePatchRect"]
self_modulate = Color( 0.431373, 0.431373, 0.431373, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -150.0
margin_right = 120.0
margin_bottom = 112.0
rect_min_size = Vector2( 200, 100 )
theme = ExtResource( 2 )
texture = ExtResource( 3 )
patch_margin_left = 15
patch_margin_top = 19
patch_margin_right = 20
patch_margin_bottom = 16
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Display" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -114.0
margin_top = -129.0
margin_right = 114.0
margin_bottom = 129.0
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Display"]
margin_right = 228.0
margin_bottom = 19.0
text = "The Customer wants to buy:"
align = 1

[node name="Preview" type="CenterContainer" parent="Display"]
margin_top = 31.0
margin_right = 228.0
margin_bottom = 63.0

[node name="PreviewImage" type="TextureRect" parent="Display/Preview"]
margin_left = 98.0
margin_right = 130.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
stretch_mode = 4

[node name="ItemName" type="Label" parent="Display"]
margin_top = 75.0
margin_right = 228.0
margin_bottom = 94.0
text = "Medicine"
align = 1

[node name="Dial" type="HBoxContainer" parent="Display"]
margin_top = 106.0
margin_right = 228.0
margin_bottom = 138.0
custom_constants/separation = 0

[node name="HundredThousand" type="SpinBox" parent="Display/Dial"]
margin_right = 38.0
margin_bottom = 32.0
max_value = 9.0
allow_greater = true
allow_lesser = true
align = 3

[node name="TenThousand" type="SpinBox" parent="Display/Dial"]
margin_left = 38.0
margin_right = 76.0
margin_bottom = 32.0
max_value = 9.0
allow_greater = true
allow_lesser = true
align = 3

[node name="Thousand" type="SpinBox" parent="Display/Dial"]
margin_left = 76.0
margin_right = 114.0
margin_bottom = 32.0
max_value = 9.0
allow_greater = true
allow_lesser = true
align = 3

[node name="Hundred" type="SpinBox" parent="Display/Dial"]
margin_left = 114.0
margin_right = 152.0
margin_bottom = 32.0
max_value = 9.0
allow_greater = true
allow_lesser = true
align = 3

[node name="Ten" type="SpinBox" parent="Display/Dial"]
margin_left = 152.0
margin_right = 190.0
margin_bottom = 32.0
max_value = 9.0
allow_greater = true
allow_lesser = true
align = 3

[node name="One" type="SpinBox" parent="Display/Dial"]
margin_left = 190.0
margin_right = 228.0
margin_bottom = 32.0
max_value = 9.0
allow_greater = true
allow_lesser = true
align = 3

[node name="Percentage" type="Label" parent="Display"]
margin_top = 150.0
margin_right = 228.0
margin_bottom = 170.0
rect_min_size = Vector2( 200, 20 )
text = "100% of Wholesale Price"
align = 1
valign = 1

[node name="Offer" type="Button" parent="Display"]
margin_top = 182.0
margin_right = 228.0
margin_bottom = 202.0
rect_min_size = Vector2( 200, 0 )
text = "Make the Offer"

[node name="Decline" type="Button" parent="Display"]
margin_top = 214.0
margin_right = 228.0
margin_bottom = 234.0
text = "Refuse Deal"

[connection signal="value_changed" from="Display/Dial/HundredThousand" to="." method="_on_HundredThousand_value_changed"]
[connection signal="value_changed" from="Display/Dial/TenThousand" to="." method="_on_TenThousand_value_changed"]
[connection signal="value_changed" from="Display/Dial/Thousand" to="." method="_on_Thousand_value_changed"]
[connection signal="value_changed" from="Display/Dial/Hundred" to="." method="_on_Hundred_value_changed"]
[connection signal="value_changed" from="Display/Dial/Ten" to="." method="_on_Ten_value_changed"]
[connection signal="value_changed" from="Display/Dial/One" to="." method="_on_One_value_changed"]
[connection signal="pressed" from="Display/Offer" to="." method="_on_Offer_pressed"]
[connection signal="pressed" from="Display/Decline" to="." method="_on_Decline_pressed"]
